--- a/support/paths.yml
+++ b/support/paths.yml
@@ -9,6 +9,7 @@ database:
   exiobase:
     raw: 'DENG-SESAM - Documenti/c-Research/a-Datasets/Exiobase Hybrid 3.3.18 with VA/flows'
     aggregated: 'DENG-SESAM - Documenti/c-Research/a-Datasets/ExioSteel'
+    extended: 'DENG-SESAM - Documenti/c-Research/a-Datasets/ExioSteel'
   ember: 'DENG-SESAM - Documenti/c-Research/a-Datasets/EMBER/yearly_full_release_long_format.csv'
 
 
