--- a/support/paths.yml
+++ b/support/paths.yml
@@ -1,13 +1,13 @@
 onedrive_folder: 
-  LR: '/Users/lorenzorinaldi/Library/CloudStorage/OneDrive-SharedLibraries-PolitecnicodiMilano/'
+  LR: '/Users/lorenzorinaldi/Library/CloudStorage/OneDrive-SharedLibraries-PolitecnicodiMilano/DENG-SESAM - Documenti/c-Research/a-Datasets/'
   DG: ''
 
 
 database:
   exiobase:
-    raw: 'DENG-SESAM - Documenti/c-Research/a-Datasets/Exiobase Hybrid 3.3.18 with VA/flows'
-    aggregated: 'DENG-SESAM - Documenti/c-Research/a-Datasets/ExioSteel/Raw_aggregated'
-    extended: 'DENG-SESAM - Documenti/c-Research/a-Datasets/ExioSteel/Extended'
-  ember: 'DENG-SESAM - Documenti/c-Research/a-Datasets/EMBER/yearly_full_release_long_format.csv'
+    raw: 'Exiobase Hybrid 3.3.18 with VA/flows'
+    aggregated: 'ExioSteel/Raw_aggregated'
+    extended: 'ExioSteel/Extended'
+  ember: 'EMBER/yearly_full_release_long_format.csv'
 
-inventories: 'DENG-SESAM - Documenti/c-Research/a-Datasets/ExioSteel/Inventories'
+inventories: 'ExioSteel/Inventories'
